2005-03-30  Rogério Pereira Araújo <rogerio.araujo@gmail.com>

	* Icon.cs: Finished Icon(Type, String) ctor

2005-03-23 Jordi Mas i Hernandez <jordi@ximian.com>

	* gdipFunctions.cs: fixes GdipGetImagePalette signature
	* Image.cs: Implements Palette property using gdiplus	  

2005-03-17  Peter Bartok  <pbartok@novell.com>

	* gdipFunctions.cs: 
	  - Changed P/Invoke signature for GdipLoadImageFromDelegate_linux()
	    method, now includes a get header delegate
	  - Added StreamGetHeaderImpl method, to allow libgdiplus to determine 
	    the image type even on non-seekable streams
	  - Fixed StreamGetBytesImpl to consider the bytes already retrieved
	    via StreamGetHeaderImpl
	* Image.cs: Fixed call to GdipLoadImageFromDelegate_linux() to include
	  the new StreamGetHeader delegate

2005-03-15 Jordi Mas i Hernandez <jordi@ximian.com>

	* Pen.cs: Fixes dispose method to allow to be called multiple times
	* Graphics.cs: matrix are saved and restored at gdiplus level	

2005-02-24  Geoff Norton  <gnorton@customerdna.com>

	* gdipFunctions.cs: Cache the delegates in the GdiPlusStreamHelper
	so they dont get garbage collected before use.

2005-02-11  Peter Bartok  <pbartok@novell.com>

	* gdipFunctions.cs: Fixed prototype to match previous checkin

2005-02-11  Peter Bartok  <pbartok@novell.com>

	* Graphics.cs (FromImage): Fixed type of graphics to be IntPtr (since
	  it really is a pointer)

2005-02-10  Geoff Norton  <gnorton@customerdna.com>

	* Icon.cs: Implement GetObjectData ()
	* Image.cs: Implement GetObjectData ()

2005-02-09  Geoff Norton  <gnorton@customerdna.com>

	* Icon.cs: Implement deserializer
	* Bitmap.cs: Implement deserializer

2005-02-06  Ben Maurer  <bmaurer@ximian.com>

	* Brushes.cs: Kill the static ctor here, it has tons of code bloat.

2005-02-03 Jordi Mas i Hernandez <jordi@ximian.com>

	* Region.cs: revert Jackson's patch and fix this at libgdiplus level

2005-02-02  Jackson Harper  <jackson@ximian.com>
